--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   dotted_line: ^3.0.0
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
